# src/main/java/flapkap/vendingmachine/api/mapper/UserMapper.java
@@ -1,38 +1,26 @@
 package flapkap.vendingmachine.api.mapper;
 
+import flapkap.vendingmachine.api.v1.resources.UserAuthResponseResource;
 import flapkap.vendingmachine.api.v1.resources.UserResource;
 import flapkap.vendingmachine.api.v1.resources.UserResponseResource;
 import flapkap.vendingmachine.api.v1.resources.UserUpdateResource;
+import flapkap.vendingmachine.data.dto.AuthTokenDto;
 import flapkap.vendingmachine.data.dto.UserDto;
 import flapkap.vendingmachine.data.entities.User;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-import org.mapstruct.Named;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 import java.util.List;
 
 @Mapper(componentModel = "spring")
-public abstract class UserMapper {
-    @Autowired
-    private BCryptPasswordEncoder bCryptPasswordEncoder;
+public interface UserMapper {
+    UserDto map(UserResource userResource);
 
-   public abstract UserDto map(UserResource userResource);
+    User map(UserDto userDto);
+    UserResponseResource map(User user);
 
-   @Mapping(target = "password", source = "userDto", qualifiedByName = "encryptPassword")
-   public abstract User map(UserDto userDto);
+    List<UserResponseResource> map(List<User> user);
 
-    @Named("encryptPassword")
-    protected String encryptPassword(final UserDto userDto) {
-        userDto.setPassword(bCryptPasswordEncoder.encode(userDto.getPassword()));
+    UserDto map(UserUpdateResource userUpdateResource);
 
-        return userDto.getPassword();
-    }
-
-   public abstract UserResponseResource map(User user);
-
-   public abstract List<UserResponseResource> map(List<User> user);
-
-   public abstract UserDto map(UserUpdateResource userUpdateResource);
+    UserAuthResponseResource map(AuthTokenDto authTokenDto);
 }
