# src/main/java/flapkap/vendingmachine/data/dto/UserDto.java
@@ -1,17 +1,17 @@
 package flapkap.vendingmachine.data.dto;
 
 public class UserDto {
-    private String userName;
+    private String username;
     private String password;
     private Double deposit;
     private Long roleId;
 
-    public String getUserName() {
-        return userName;
+    public String getUsername() {
+        return username;
     }
 
-    public void setUserName(String userName) {
-        this.userName = userName;
+    public void setUsername(String username) {
+        this.username = username;
     }
 
     public String getPassword() {
